@@ -1,6 +1,7 @@
 CHANGES
 =======
 
+* Add/update case model
 * Add unit tests for pagination
 * Add results pagination and add result support
 * Add get runs support with pagination
